--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ Flask-Login==0.2.11
 loginform==1.1.1
 gunicorn==19.3.0
 Jinja2==2.8
+itsdangerous==0.24
+MarkupSafe==0.23
+psycopg2==2.6.1
+SQLAlchemy==1.0.12
+Werkzeug==0.11.9
